tests/paczka1/small_fuzzy/46552154.err
Error in line 2: IwWWW S415 5,7
Error in line 4: IwWWW A747 17,0
Error in line 7: Mwh S102 7,9
